hphp/test/slow/type_annotation/type_annotation6.php.expectf
Fatal error: Type constant D::P is abstract in %s on line 8
